tests/paczka1/fuzzy1/71827283.err
Error in line 7: cAoz0 A97 82,3
Error in line 6: w3cgKkZspFT S935 50,5
Error in line 3: tkH A97 90,5
Error in line 15: Iccy A793 42,7
Error in line 17: Iccy A962 27,8
Error in line 5: A97 A793 15,0
Error in line 16: tkH S935 80,4
Error in line 19: A97 A97 13,7
Error in line 18: Iccy A97 77,8
Error in line 33: 895GBsAX A793 43,9
